Show connector on hover, fix z-index for selection mask

--- a/src/global.scss
+++ b/src/global.scss
@@ -164,6 +164,15 @@
                 }
             }
 
+            &.jtk-hover {
+                path {
+                    stroke: $connector_hover_color;
+                    &.jtk-arrow {
+                        fill: $connector_hover_color;
+                    }
+                }
+            }
+
             &.confirm-delete {
                 path {
                     stroke: $red;
